--- a/src/component/DetailCharComp/RecomComp.css
+++ b/src/component/DetailCharComp/RecomComp.css
@@ -23,3 +23,24 @@
     padding: 10px;
     margin: 30px;
 }
+
+@media screen and (max-width: 1000px) {
+    .container-recom img{
+        width: 75px;
+        height: 75px;
+    }
+    .container-recom h3{
+        font-size: 24px;
+    }
+}
+
+@media screen and (max-width: 720px) {
+
+    .container-recom img{
+        width: 50px;
+        height: 50px;
+    }
+    .container-recom h3{
+        font-size: 18px;
+    }
+}
