--- a/src/component/FooterComp/FooterComp.css
+++ b/src/component/FooterComp/FooterComp.css
@@ -36,6 +36,10 @@
     border-left: 2px solid #9CA3AF;
 }
 
+.content-footer ul li a.active{
+    border-left: 3px solid #9CA3AF;
+}
+
 .content-footer-4{
     font-weight: bold;
     color: #9CA3AF;
