--- a/src/component/DetailCharComp/DetailComp.css
+++ b/src/component/DetailCharComp/DetailComp.css
@@ -21,7 +21,6 @@
 
 .content-kanan-character{
     color: #9CA3AF;
-    margin-left: 30px;
     margin-top: auto;
     margin-bottom: auto;
 }
@@ -31,7 +30,13 @@
 }
 
 .content-kanan-character h1{
-    font-size: 48px;
+    font-size: 64px;
+    margin-left: 40px;
+}
+
+.content-kanan-character .detail-character ul{
+    margin-left: 10px;
+    margin-top: 30px;
 }
 
 .content-kanan-character .detail-character ul li{
@@ -41,8 +46,7 @@
     border-radius: 50%;
     font-size: 24px;
     padding: 15px;
-    margin-left: 10px;
-    /* rgba(34, 42, 58, 1) */
+    margin-left: 30px;
 }
 
 @media screen and (max-width: 1000px) {
@@ -64,7 +68,7 @@
 
 @media screen and (max-width: 720px) {
     .content-character{
-        display: flex;
+        display: block;
     }
 
     .content-kiri-character img{
@@ -74,11 +78,18 @@
 
     .content-kanan-character h1{
         font-size: 18px;
+        text-align: center;
+    }
+
+    .content-kanan-character .detail-character ul{
+        margin-top: 10px;
+        /* background-color: red; */
     }
 
     .content-kanan-character .detail-character ul li{
         padding: 10px;
         font-size: 10px;
-        margin-left: 4px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
