--- a/src/container/KarakterCont/KarakterCont.css
+++ b/src/container/KarakterCont/KarakterCont.css
@@ -57,6 +57,10 @@
     /* padding: 20px; */
 }
 
+.karakter a{
+    text-decoration: none;
+}
+
 .karakter-info .card-karakter {
     padding-bottom: 10px;
     width: 100px;
